# cmu_418_project

./: .gitignore  CMakeLists.txt  README.md  setup_instructions.md  setup_readme.md
src/: .sample.cu.swp  sample.cu
src/image_classification/: .batchToVisualWords.cpp.swo  .get_visual_words.cpp.swo  batchToVisualWords.cpp  buildRecognitionSystem.cpp  create_filter_bank.cpp  create_filter_bank.h  cuda_get_visual_words.cu  cuda_get_visual_words.h  evaluateRecognitionSystem_NN.cpp  extractFilterResponses.cpp  extractFilterResponses.h  getImageFeatures.cpp  getImageFeatures.h  get_dictionary.cpp  get_dictionary.h  get_visual_words.cpp  get_visual_words.h
src/primitives/: baseline_convolve.cpp  baseline_convolve.h  baseline_multiply.cpp  cuda_naive_convolve.cu  cuda_naive_convolve.h  extractFilterResponses.cpp  opencv_convolve.cpp
src/primitives/cuda_optimized/: Makefile  convolutionSeparable  convolutionSeparable.cu  convolutionSeparable_common.h  main.cpp
